fix popup visibility

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  display: none;
+  display: flex;
   flex-direction: column;
   position: fixed;
   top: 0;
@@ -9,4 +9,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.2s, opacity 0.3s ease-in-out;
   }
